test/corpus/accounts.txt
====================
simple account name
====================

2024-4-3
wrk

--------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account))))

==================
deep account name
==================

2024-4-3
wrk:prj:treesitter:timedot

------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account))))

=========================
account name with spaces
=========================

2024-4-3
Work:My Projects:Tree Sitter:timedot

------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account))))

==========================
account name with unicode
==========================

2024-4-3
🚧:⚗️:📝

--------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account))))

=================
nesting accounts
=================

2024-4-3
wrk
  proj
    tree-sitter    ..

-----------------

(source_file
  (day_entry
    (date)
    (transaction
      (account))
    (transaction
      (account)
    (transaction
      (account)
      (quantity)))))
