test/corpus/dates.txt
=================
date with dashes
=================

2024-4-2

-----------------

(source_file
  (journal_entry
    (date)))

==================
date with slashes
==================

2024-4-2

------------------

(source_file
  (journal_entry
    (date)))

===============
date with dots
===============

2024/4/2

---------------

(source_file
  (journal_entry
    (date)))

==================================
multiple entries with mixed dates
==================================

2024-4-2
2024-4-2
2024/4/2

------------

(source_file
  (journal_entry
    (date))
  (journal_entry
    (date))
  (journal_entry
    (date)))
