test/corpus/spacers.txt
======================================
single transaction with simple spacer
======================================

2024-4-2
wrk  ....

--------------------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account)
      (quantity))))

=============================================
single transaction with some spacer (spaces)
=============================================

2024-4-2
wrk                 ....

---------------------------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account)
      (quantity))))

============================================
single transaction with some spacer (mixed)
============================================

2024-4-2
wrk	    ....

--------------------------------------------

(source_file
  (day_entry
    (date)
    (transaction
      (account)
      (quantity))))
